--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "next": "15.1.0",
     "nextjs": "^0.0.3",
     "react": "^19.0.0",
