resized citrus candy bag image on shop page. changed Ctirus Candies to Citrus Treats on checkout page. Fixed issue with img bracket in container.js

--- a/app/shopping-cart/package.json
+++ b/app/shopping-cart/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopping-cart-faggotassnigga",
+  "name": "shopping-cart",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
