--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
     "next": "^15.1.0",
+    "next-seo": "^6.6.0",
     "nextjs": "^0.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
