--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
+    "json-bigint": "^1.0.0",
     "next": "^15.1.0",
     "next-seo": "^6.6.0",
     "nextjs": "^0.0.3",
