--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "20": "^1.0.0",
+    "@supabase/supabase-js": "^2.75.0",
     "@vercel/analytics": "^1.4.1",
     "json-bigint": "^1.0.0",
     "next": "^15.3.2",
