adding backend application

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -38,3 +38,7 @@ logging.level.org.springframework.security=INFO
 
 # Security Configuration
 spring.security.require-ssl=false
+
+# Square Webhook Configuration
+# Get this from Square Developer Dashboard when you create the webhook
+square.webhook.signature.key=${SQUARE_WEBHOOK_SIGNATURE_KEY:}
