--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 spring.application.name=store
 
-# Supabase Database Configuration
+# Supabase Database Configuration (currently disabled - enable when credentials are fixed)
 # IMPORTANT: Set these environment variables with your actual Supabase credentials
 # DO NOT commit real credentials to version control
-spring.datasource.url=jdbc:postgresql://aws-1-ca-central-1.pooler.supabase.com:5432/postgres
-spring.datasource.username=postgres.jrmgouykfgubpiqrynbh
-spring.datasource.password=hW6YOa2tJ9Xp7xtt
-spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://aws-1-ca-central-1.pooler.supabase.com:5432/postgres
+# spring.datasource.username=postgres.jrmgouykfgubpiqrynbh
+# spring.datasource.password=hW6YOa2tJ9Xp7xtt
+# spring.datasource.driver-class-name=org.postgresql.Driver
 
-# H2 In-Memory Database Configuration (for testing only - currently disabled)
-# spring.datasource.url=jdbc:h2:mem:testdb
-# spring.datasource.username=sa
-# spring.datasource.password=
-# spring.datasource.driver-class-name=org.h2.Driver
-# spring.h2.console.enabled=true
+# H2 In-Memory Database Configuration (for testing - currently ENABLED)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
 
-# JPA Configuration for Supabase
-spring.jpa.hibernate.ddl-auto=validate
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
