added square webhook

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,24 +1,22 @@
 spring.application.name=store
 
-# Supabase Database Configuration (currently disabled - enable when credentials are fixed)
-# IMPORTANT: Set these environment variables with your actual Supabase credentials
-# DO NOT commit real credentials to version control
-# spring.datasource.url=jdbc:postgresql://aws-1-ca-central-1.pooler.supabase.com:5432/postgres
-# spring.datasource.username=postgres.jrmgouykfgubpiqrynbh
-# spring.datasource.password=hW6YOa2tJ9Xp7xtt
-# spring.datasource.driver-class-name=org.postgresql.Driver
+# Supabase Database Configuration (ENABLED)
+spring.datasource.url=jdbc:postgresql://db.jrmgouykfgubpiqrynbh.supabase.co:6543/postgres?sslmode=require&prepareThreshold=0
+spring.datasource.username=postgres
+spring.datasource.password=hW6YOa2tJ9Xp7xtt
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# H2 In-Memory Database Configuration (for testing - currently ENABLED)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.h2.console.enabled=true
+# H2 In-Memory Database Configuration (DISABLED - using Supabase)
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.h2.console.enabled=true
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
@@ -41,4 +39,4 @@ spring.security.require-ssl=false
 
 # Square Webhook Configuration
 # Get this from Square Developer Dashboard when you create the webhook
-square.webhook.signature.key=${SQUARE_WEBHOOK_SIGNATURE_KEY:}
+square.webhook.signature.key=bVw4jHjy-KlmaUw-C1TS4g
